--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chapter-3",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https//codyveladev.github.io/contact-managment-system",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -9,6 +10,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
+    "gh-pages": "^3.1.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
@@ -16,6 +18,7 @@
     "uuid": "^8.3.1"
   },
   "scripts": {
+    "deploy": "npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
