--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "chapter-3",
+  "name": "contact-managment-system",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https//codyveladev.github.io/contact-managment-system",
+  "homepage": "https://codyveladev.github.io/contact-managment-system",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
